# uifs

./: .code-workspace  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  flake.nix  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.direnv/: flake-profile  flake-profile-1-link  flake-profile-10-link  flake-profile-11-link  flake-profile-12-link  flake-profile-13-link  flake-profile-14-link  flake-profile-15-link  flake-profile-16-link  flake-profile-17-link  flake-profile-18-link  flake-profile-19-link  flake-profile-2-link  flake-profile-20-link  flake-profile-21-link  flake-profile-22-link  flake-profile-23-link  flake-profile-24-link  flake-profile-26-link  flake-profile-27-link  flake-profile-3-link  flake-profile-4-link  flake-profile-5-link  flake-profile-6-link  flake-profile-7-link  flake-profile-8-link  flake-profile-9-link
src/: lib.rs  logger.rs  main.rs
ui/: app.slint  metrics.slint  split_line.slint
uifs-app/: Cargo.toml  build.rs
uifs-app/.cargo/: config.toml
uifs-app/src/: lib.rs  logger.rs  main.rs  protocol.rs  receiver.rs
uifs-app/ui/: about_page.slint  app.slint  metrics.slint  split_line.slint
uifs-app/ui/pages/: about.slint  home.slint
uifs-app/ui/widgets/: side_row.slint  side_section.slint  split_line.slint
uifs-microbit/: Cargo.toml  Embed.toml  build.rs
uifs-microbit/src/: main.rs
