[workspace]
default-members = ["uifs-app"]
members = ["uifs-app", "uifs-microbit"]
resolver = "2"

[workspace.package]
name = "uifs"
version = "0.1.0"
authors = ["呃呃 <meandSSH0219@gmail.com>"]
edition = "2021"
description = "A simple Slint-based UI for teaching FPGA via serial port"
readme = "README.md"
homepage = "https://github.com/meandssh/uifs"
repository = "https://github.com/meandssh/uifs"
license-file = "LICENSE"

[workspace.dependencies]
bytes = { version = "1.7.1", default-features = false }