[package]
name = "uifs-app"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = "1.76.0"
description = "GUI part for uifs."
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
build = "build.rs"

[dependencies.bytes]
workspace = true

[dependencies.const-hex]
version = "1.11"

[dependencies.miette]
version = "7"
features = ["fancy"]


[dependencies.mimalloc]
version = "0.1"
features = []

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.serialport]
version = "4"
features = []
default-features = false

[dependencies.slint]
version = "1"
features = ["compat-1-2", "software-renderer-systemfonts"]
default-features = false

[dependencies.snafu]
version = "0.8"
features = []

[dependencies.tokio]
version = "1.36"
features = ["rt-multi-thread", "fs", "macros", "sync", "time"]
default-features = false

[dependencies.tracing]
version = "0.1"
features = []
default-features = false

[dependencies.tracing-appender]
version = "0.2"
features = []
default-features = false

[dependencies.tracing-subscriber]
version = "0.3"
features = ["ansi", "chrono", "parking_lot", "env-filter"]
default-features = false

[build-dependencies]
slint-build = "1"

[features]
default = ["slint/backend-winit", "slint/renderer-femtovg"]
qt = ["slint/backend-qt", "slint/renderer-femtovg"]
skia = ["slint/backend-winit", "slint/renderer-skia"]
soft = ["slint/backend-winit", "slint/renderer-software"]
vulkan = ["slint/backend-winit", "slint/renderer-skia-vulkan"]
wayland = ["slint/backend-winit-wayland", "slint/renderer-femtovg"]
x11 = ["slint/backend-winit-x11", "slint/renderer-femtovg"]
