[package]
name = "uifs-app"
version = "0.1.0"
authors = { workspace = true }
edition = { workspace = true }
rust-version = "1.76.0"
description = "GUI part for uifs."
readme = { workspace = true }
homepage = { workspace = true }
repository = { workspace = true }
license-file = { workspace = true }
build = "build.rs"
default-run = "uifs-app"

[dependencies.bytes]
workspace = true

[dependencies.const-hex]
version = "1.12.0"

[dependencies.num_enum]
version = "0.7.3"
default-features = false

[dependencies.serialport]
version = "4.5.0"
features = []
default-features = false

[dependencies.slint]
version = "1.7.2"
features = ["compat-1-2"]
default-features = false

[dependencies.snafu]
version = "0.8.4"

[dependencies.tokio]
version = "1.40.0"
features = ["rt-multi-thread", "fs", "macros", "time"]
default-features = false

[dependencies.tracing]
version = "0.1.40"
features = []
default-features = false

[dependencies.tracing-appender]
version = "0.2.3"
features = []
default-features = false

[dependencies.tracing-subscriber]
version = "0.3.18"
features = ["ansi", "chrono", "parking_lot", "env-filter"]
default-features = false

[build-dependencies]
slint-build = "1.7.2"

[features]
default = [
    "slint/backend-default",
    "slint/renderer-femtovg"
]
